--- a/AnagramSolver/build.gradle
+++ b/AnagramSolver/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.5.+'
     }
 }
+
 apply plugin: 'android'
 
 repositories {
@@ -23,4 +24,7 @@ android {
 }
 
 dependencies {
+
+    compile files('libs/GoogleAdMobAdsSdk-6.4.1.jar')
+    compile files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
 }
