--- a/AnagramSolver/src/main/AndroidManifest.xml
+++ b/AnagramSolver/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"> >
 
         <!-- SplashScreen Activity
         <activity
@@ -30,16 +30,30 @@
 
         <!-- Main Activity -->
         <activity
-            android:name="com.wiredin.anagramsolver.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
-
+            android:name="com.wiredin.anagramsolver.screens.MainScreen"
+            android:label="WordFinder">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity
+            android:name="com.wiredin.anagramsolver.screens.SettingsActivity"
+            android:label="Settings">
 
+        </activity>
+
+        <activity
+            android:name="com.wiredin.anagramsolver.screens.DefinitionScreen"
+            android:label="Definition">
+
+        </activity>
+
+        <activity android:name="com.google.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+
+    </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
