--- a/AnagramSolver/build.gradle
+++ b/AnagramSolver/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.5.+'
+        classpath 'com.android.tools.build:gradle:0.12.+'
     }
 }
 
@@ -14,17 +14,22 @@ repositories {
 }
 
 android {
-    compileSdkVersion 17
-    buildToolsVersion "17.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.1"
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 17
+        minSdkVersion 14
+        targetSdkVersion 21
     }
 }
 
 dependencies {
-
+    compile 'com.wordnik:wordnik-android-client:4.0'
     compile files('libs/GoogleAdMobAdsSdk-6.4.1.jar')
     compile files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
+    compile 'com.android.support:support-v13:21.+'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:cardview-v7:21.+'
+    compile 'com.android.support:recyclerview-v7:21.+'
+    compile 'com.android.support:palette-v7:21.+'
 }
